@@ -7,3 +7,4 @@ Deluge 1.1.0 - "" (In Development)
  GtkUI:
   * Add peer progress to the peers tab
   * Sorting # column will place downloaders above seeds
+  * Remove dependency on libtorrent for add torrent dialog
